add servo controller

--- a/config/v4l2_camera_params.yaml
+++ b/config/v4l2_camera_params.yaml
@@ -3,11 +3,11 @@ pan_tilt_camera:
     video_device: "/dev/video1"
     time_per_frame: [1, 30] # Set the desired FPS here
     image_size: [640, 480]
-    output_encoding: "yuv422_yuy2"
+    # output_encoding: "yuv422_yuy2"
 
 fisheye_camera:
   ros__parameters:
     video_device: "/dev/video0"
     time_per_frame: [1, 30] # Set the desired FPS here
     image_size: [640, 480]
-    output_encoding: "yuv422_yuy2"
+    # output_encoding: "yuv422_yuy2"
