--- a/config/v4l2_camera_params.yaml
+++ b/config/v4l2_camera_params.yaml
@@ -1,13 +1,14 @@
 pan_tilt_camera:
   ros__parameters:
-    video_device: "/dev/video1"
-    time_per_frame: [1, 30] # Set the desired FPS here
-    image_size: [640, 480]
+    video_device: 0
+    # video_device: "/dev/video1"
+    # time_per_frame: [1, 30] # Set the desired FPS here
+    # image_size: [640, 480]
     # output_encoding: "yuv422_yuy2"
 
 fisheye_camera:
   ros__parameters:
-    video_device: "/dev/video0"
-    time_per_frame: [1, 30] # Set the desired FPS here
-    image_size: [640, 480]
+    video_device: 1
+    # time_per_frame: [1, 30] # Set the desired FPS here
+    # image_size: [640, 480]
     # output_encoding: "yuv422_yuy2"
