--- a/package.xml
+++ b/package.xml
@@ -9,8 +9,12 @@
 
   <exec_depend>ros2launch</exec_depend>
 
-  <depend>v4l2_camera</depend>
-  <depend>foxglove_bridge</depend>
+  <depend>rclpy</depend>
+  <depend>image_transport</depend>
+  <depend>cv_bridge</depend>
+  <depend>sensor_msgs</depend>
+  <depend>std_msgs</depend>
+  <depend>opencv2</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
