--- a/config/v4l2_camera_params.yaml
+++ b/config/v4l2_camera_params.yaml
@@ -1,6 +1,7 @@
 pan_tilt_camera:
   ros__parameters:
     video_device: 0
+    frame_rate: 10
     # video_device: "/dev/video1"
     # time_per_frame: [1, 30] # Set the desired FPS here
     # image_size: [640, 480]
@@ -9,6 +10,8 @@ pan_tilt_camera:
 fisheye_camera:
   ros__parameters:
     video_device: 2
+    frame_rate: 10
+    # video_device: "/dev/video1"
     # time_per_frame: [1, 30] # Set the desired FPS here
     # image_size: [640, 480]
     # output_encoding: "yuv422_yuy2"
